objects/SIM_State_Change__c.object
<CustomObject>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>SIM State Changes</relationshipLabel>
        <relationshipName>SIM_State_Changes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FromSimState__c</fullName>
        <label>FromSimState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToSimState__c</fullName>
        <label>ToSimState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SIM State Change</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Device__c</columns>
        <columns>FromSimState__c</columns>
        <columns>ToSimState__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>SIM State Change Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIM State Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>